--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@ Portfolio
 </head>
 <body>
 Hello World 
-<a href="https://gritepanche.github.com">This page</a>
+<a href="https://gritepanche.github.io">This page</a>
 </body>
 </html>
