--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
       <a class="navbar-brand" href="#">Gritepanche</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">Products</a></li>
+      <li class="active"><a href="#">Products</a></li>
       <li><a href="#">News</a></li>
       <li><a href="#">About Us</a></li>
     </ul>
@@ -25,8 +24,8 @@
 </nav>
   
 <div class="container">
-  <h3>Basic Navbar Example</h3>
-  <p>Heelo World</p>
+  <h3>THis is index page</h3>
+  <p>Hello World</p>
 </div>
 
 </body>
