--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a class="navbar-brand" href="#">Gritepanche</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Products</a></li>
+      <li class="active"><a href="products.html">Products</a></li>
       <li><a href="#">News</a></li>
       <li><a href="#">About Us</a></li>
     </ul>
