--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="products.html">Products</a></li>
-      <li><a href="#">News</a></li>
-      <li><a href="#">About Us</a></li>
+      <li><a href="#News">News</a></li>
+      <li><a href="#Products">Products</a></li>
+      <li><a href="#About">About Us</a></li>
     </ul>
   </div>
 </nav>
@@ -27,6 +28,18 @@
   <h3>THis is index page</h3>
   <p>Hello World</p>
 </div>
+ <div id="News">
+   This is the news section
+ </div>
+<div id="Products">
+  This is the products section
+ </div>
+<div id="About">
+  This is the abput section
+ </div>
+  <footer>
+    Follow Us:
+    </footer>
 
 </body>
 </html>
