--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
   <footer>
     Follow Us:
     </footer>
-
+<div id="self">
+  <a href="https://codepen.io/jdlaplan/pen/lboeD">Change class on scroll</a>
+  </div>
 </body>
 </html>
