--- a/index.html
+++ b/index.html
@@ -17,32 +17,18 @@
       <a class="navbar-brand" href="#">Gritepanche</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="products.html">Products</a></li>
-      <li><a href="#News">News</a></li>
-      <li><a href="#Products">Products</a></li>
-      <li><a href="#About">About Us</a></li>
+      <li class="active"><a href="#">Home</a></li>
+      <li><a href="news.html">News</a></li>
+      <li><a href="products.html">Products</a></li>
+      <li><a href="about.html">About Us</a></li>
     </ul>
   </div>
 </nav>
   
 <div class="container">
-  <h3>THis is index page</h3>
-  <p>Hello World</p>
+  <h3>Index page</h3>
+  <p>This is index page</p>
 </div>
- <div id="News">
-   This is the news section
- </div>
-<div id="Products">
-  This is the products section
- </div>
-<div id="About">
-  This is the abput section
- </div>
-  <footer>
-    Follow Us:
-    </footer>
-<div id="self">
-  <a href="https://codepen.io/jdlaplan/pen/lboeD">Change class on scroll</a>
-  </div>
+
 </body>
 </html>
