--- a/products.html
+++ b/products.html
@@ -4,6 +4,7 @@
   <title>Portfolio</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -16,16 +17,17 @@
       <a class="navbar-brand" href="#">Gritepanche</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Products</a></li>
-      <li><a href="#">News</a></li>
-      <li><a href="#">About Us</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="news.html">News</a></li>
+      <li class="active"><a href="products.html">Products</a></li>
+      <li><a href="about.html">About Us</a></li>
     </ul>
   </div>
 </nav>
   
 <div class="container">
-  <h3>THis is index page</h3>
-  <p>Hello World</p>
+  <h3>Product page</h3>
+  <p>This is products page</p>
 </div>
 
 </body>
